Adding box on /home about secure headers

--- a/app/translations/fr/LC_MESSAGES/messages.po
+++ b/app/translations/fr/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2018-10-25 07:29-0500\n"
+"POT-Creation-Date: 2019-02-10 12:05-0600\n"
 "PO-Revision-Date: 2018-10-13 13:36-0500\n"
 "Last-Translator: \n"
 "Language: fr\n"
@@ -247,6 +247,15 @@ msgstr ""
 "Flask-Babel ajoute un support d'internationalisation et de localisation à"
 " l'application Web. Il respecte les langues préférées de l’utilisateur "
 "envoyées par le navigateur. Actuellement pris en charge: français."
+
+#: app/public/templates/home.html:35
+msgid ""
+"Secure.py enhances application security by enabling browser security "
+"policies. Secure header defaults come from OWASP Secure Headers project."
+msgstr ""
+"Secure.py améliore la sécurité en activant l'application de sécurité du "
+"navigateur. Les en-têtes sécurisés par défaut proviennent du projet OWASP "
+"Secure Headers."
 
 #: app/templates/401.html:3
 msgid "Unauthorized"
